objects/ASI_CRM_Customer_Group_Line__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Contract_Sequence__c</fullName>
        <label>Contract Sequence</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Customer_Group__c</fullName>
        <label>Customer Group</label>
        <referenceTo>ASI_CRM_Customer_Group__c</referenceTo>
        <relationshipLabel>Customer Group Lines</relationshipLabel>
        <relationshipName>Customer_Group_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>Customer Group Lines</relationshipLabel>
        <relationshipName>Customer_Group_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Threshold__c</fullName>
        <label>Threshold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Customer Group Line</label>
    <nameField>
        <displayFormat>CGL-{00000000}</displayFormat>
        <label>Customer Group Line NO.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Group Lines</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_CN_Customer_Group_Line</fullName>
        <active>true</active>
        <label>CN Customer Group Line</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>